Fixed rewrite rule.

--- a/public/web.config
+++ b/public/web.config
@@ -5,6 +5,9 @@
             <rules>
                 <rule name="Rewrite requested file/folder to index.php" stopProcessing="true">
                     <match url="^(.*)$" ignoreCase="false" />
+                    <conditions logicalGrouping="MatchAll">
+                       <add input="{REQUEST_FILENAME}" matchType="IsFile" ignoreCase="false" negate="true" />
+                    </conditions>
                     <action type="Rewrite" url="index.php" appendQueryString="true" />
                 </rule>
             </rules>
